--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
     "vue": "^3.0.4"
   },
