--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
